@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.4.0
 
+  *) mod_log_config: Fix segfault when trying to log a nameless, valueless
+     cookie. PR 52256. [Rainer Canavan <rainer-apache 7val com>]
+
   *) mod_ssl: when compiled against OpenSSL 1.0.1 or later, allow explicit
      control of TLSv1.1 and TLSv1.2 through the SSLProtocol directive.
      [Kaspar Brand]
